--- a/nginx.conf
+++ b/nginx.conf
@@ -3,14 +3,14 @@ events {
     worker_connections  1024;
 }
 http {
-    include       /usr/local/etc/nginx/mime.types;
+    include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     server {
         listen 8080;
         server_name _;
         
         location / {
-            root /Users/jakezheng/Workspaces/demo_area/im-vue/dist;
+            root /usr/share/nginx/html;
             index index.html;
         }
     }
